[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Character/PlayerSprites/ball.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Character/PlayerSprites/Slime_Sapp_Sheet_01.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.15
bounce = 0.3

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 112 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 60.1409

[node name="Player" type="RigidBody2D"]
collision_layer = 16384
collision_mask = 513
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
continuous_cd = 1
sleeping = true
angular_damp = 39.183
script = ExtResource( 2 )
JUMP_IMPULSE = Vector2( 0, -150 )
JUMP_IMPULSE_FIXED = Vector2( 0, -150 )
RUN_IMPULSE = Vector2( 30, 0 )
MAX_VELOCITY = 169

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 5, 5 )
frames = SubResource( 8 )
animation = "Walk"
frame = 2
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -48, -40, -24, -56, 8, -72, 24, -48, 48, 8, 48, 56, 48, 72, 32, 56, 8, 56, -8, 24, -40 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Node2D"]
position = Vector2( -56, 0 )

[node name="Node2D2" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.005

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="DeathTime" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="SolidifyTime" type="Timer" parent="."]
wait_time = 2.759
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTime" to="." method="_on_DeathTime_timeout"]
[connection signal="timeout" from="SolidifyTime" to="." method="_on_SolidifyTime_timeout"]
